# clamp

./: .gitignore  CMakeLists.txt  README.md
clamp/: CMakeLists.txt  clamp.h
clamp/gp/: CMakeLists.txt  GaussianProcessPriorCartesianLinear.h  GaussianProcessPriorCartesianLinearArm.h  GaussianProcessPriorCartesianLinearPointRobot.h
clamp/gp/tests/: testGaussianProcessPriorCartesianLinearArm.cpp
clamp/prior/: CMakeLists.txt  GaussianPriorCartesianLinear.h  GaussianPriorCartesianLinearArm.h  GaussianPriorCartesianLinearPointRobot.h
clamp/prior/tests/: testGaussianPriorCartesianLinearArm.cpp
matlab/: mainBatchCLAMP.m  mainBatchCLAMP_ObstacleWeightedPrior.m  mainIncrementalCLAMP.m
matlab/data/: box_closing.mat  reaching_cluttered.mat
matlab/utils/kinematics/: generateArmLFD.m  generateEEFLFD.m
matlab/utils/learners/: convertDynamics2TrajPrior.m  convertParams2Dynamics.m  setupTrainingLR.m  updateParamsBLR.m  updateParamsMLE.m
matlab/utils/obstacle/: evaluateObstacleDist.m  findWeights.m  generateEnvironment.m  generateObstacleDataset2D.m  generateObstacleDataset3D.m  plotEnvironment.m  setupEnvironment2D.m  setupEnvironment3D.m
matlab/utils/plotters/: plotDataset2D.m  plotDataset3D.m  plotDatasetTime.m  plotGPTime.m  plotGPXY.m  plotGPXYZ.m
matlab/utils/reproducers/: reproduceTraj.m
